--- a/packages/spec-driver-puppeteer/package.json
+++ b/packages/spec-driver-puppeteer/package.json
@@ -38,7 +38,7 @@
     "puppeteer:setup": "PUPPETEER_PRODUCT=firefox node ./node_modules/puppeteer/install.js",
     "deps": "bongo deps",
     "gh:test": "gh workflow run test.yml --ref $(git rev-parse --abbrev-ref HEAD) -f packages='spec-puppeteer' -f links='types utils test-utils",
-    "gh:publish": "gh workflow run publish.yml --ref $(git rev-parse --abbrev-ref HEAD) -f packages='spec-puppeteer'",
+    "gh:publish": "gh workflow run publish-spec-puppeteer.yml --ref $(git rev-parse --abbrev-ref HEAD)",
     "preversion": "bongo preversion",
     "version": "bongo version",
     "postversion": "bongo postversion --skip-release-notification"
