--- a/packages/eyes-browser-extension/package.json
+++ b/packages/eyes-browser-extension/package.json
@@ -20,7 +20,7 @@
     "report": "coverage-tests report https://raw.githubusercontent.com/applitools/sdk.coverage.tests/master/js/config.js --name 'eyes-browser-extension'",
     "deps": "bongo deps",
     "gh:test": "gh workflow run test.yml --ref $(git rev-parse --abbrev-ref HEAD) -f packages='browser-extension' -f links='eyes-sdk-core eyes-api types utils driver screenshoter visual-grid-client' -f linking-depth=2",
-    "gh:publish": "gh workflow run publish.yml --ref $(git rev-parse --abbrev-ref HEAD) -f packages='browser-extension'",
+    "gh:publish": "gh workflow run publish-browser-extension.yml --ref $(git rev-parse --abbrev-ref HEAD)",
     "preversion": "bongo preversion",
     "version": "yarn build && bongo version",
     "postversion": "bongo postversion --skip-release-notification"
