--- a/packages/eyes-cypress/package.json
+++ b/packages/eyes-cypress/package.json
@@ -16,6 +16,7 @@
     "cypress": "cd test/fixtures/testApp && cypress open --config integrationFolder=cypress/integration-play,pluginsFile=cypress/plugins/index-play.js,supportFile=cypress/support/index-play.js",
     "cypress:run": "cd test/fixtures/testApp && cypress run --config integrationFolder=cypress/integration-run,pluginsFile=cypress/plugins/index-run.js,supportFile=cypress/support/index-run.js",
     "cypress:play": "cd test/fixtures/testApp && cypress run --config integrationFolder=cypress/integration-play,pluginsFile=cypress/plugins/index-play.js,supportFile=cypress/support/index-run.js --spec=cypress/integration-play/play.js",
+    "gh:publish": "gh workflow run publish-cypress.yml --ref $(git rev-parse --abbrev-ref HEAD)",
     "preversion": "bongo preversion --skip-deps",
     "version": "bongo version",
     "postversion": "bongo postversion --skip-release-notification",
