--- a/packages/eyes-testcafe/package.json
+++ b/packages/eyes-testcafe/package.json
@@ -93,7 +93,7 @@
     "husky": "^4.3.8",
     "mocha": "^8.0.1",
     "prettier": "^2.1.2",
-    "testcafe": "^1.10.0",
+    "testcafe": "^1.18.1",
     "testcafe-10": "npm:testcafe@^1.10.0",
     "testcafe-7": "npm:testcafe@1.7.1",
     "testcafe-8": "npm:testcafe@1.8.8",
@@ -101,7 +101,7 @@
     "testcafe-browser-provider-browserstack": "^1.13.2-alpha.1",
     "ts-node": "^10.4.0",
     "ttypescript": "^1.5.12",
-    "typescript": "^4.5.1-rc"
+    "typescript": "^4.5.4"
   },
   "peerDependencies": {
     "testcafe": "^1.7.1"
