--- a/packages/eyes-webdriverio-5/package.json
+++ b/packages/eyes-webdriverio-5/package.json
@@ -110,18 +110,18 @@
     }
   },
   "dependencies": {
-    "@applitools/eyes-api": "1.1.6",
-    "@applitools/eyes-sdk-core": "12.24.13",
+    "@applitools/eyes-api": "1.1.7",
+    "@applitools/eyes-sdk-core": "13.0.0",
     "@applitools/spec-driver-webdriverio": "1.2.6",
-    "@applitools/visual-grid-client": "15.8.60"
+    "@applitools/visual-grid-client": "15.8.62"
   },
   "devDependencies": {
     "@applitools/api-extractor": "1.2.6",
     "@applitools/scripts": "1.1.0",
     "@applitools/sdk-coverage-tests": "^2.3.18",
-    "@applitools/sdk-release-kit": "^0.13.10",
+    "@applitools/sdk-release-kit": "^0.13.11",
     "@applitools/sdk-shared": "0.9.11",
-    "@applitools/test-utils": "1.0.10",
+    "@applitools/test-utils": "1.0.11",
     "@types/mocha": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
     "@typescript-eslint/parser": "^4.15.1",
@@ -142,7 +142,7 @@
     "spec-xunit-file": "0.0.1-3",
     "ts-node": "^10.2.1",
     "ttypescript": "^1.5.12",
-    "typescript": "^4.5.1-rc",
+    "typescript": "^4.5.5",
     "webdriverio": "^7.16.12"
   },
   "peerDependencies": {
