--- a/packages/eyes-cypress/package.json
+++ b/packages/eyes-cypress/package.json
@@ -48,7 +48,8 @@
     "chalk": "3.0.0",
     "cors": "2.8.5",
     "express": "4.17.1",
-    "lodash.flatten": "4.4.0"
+    "lodash.flatten": "4.4.0",
+    "throat": "^6.0.1"
   },
   "devDependencies": {
     "@applitools/scripts": "^1.1.0",
