--- a/packages/screenshoter/package.json
+++ b/packages/screenshoter/package.json
@@ -33,8 +33,8 @@
   "scripts": {
     "lint": "eslint . --ext .js",
     "test": "yarn test:it && yarn test:e2e",
-    "test:it": "mocha --no-timeouts './test/it/*.spec.js'",
-    "test:e2e": "mocha --no-timeouts './test/e2e/*.spec.js'",
+    "test:it": "mocha ./test/it/*.spec.js --no-timeouts",
+    "test:e2e": "mocha ./test/e2e/**/*.spec.js --no-timeouts --parallel --jobs 4",
     "docker:setup": "node ../scripts/scripts/generate-docker-compose-config.js && docker-compose up -d",
     "docker:teardown": "docker-compose down",
     "setup": "yarn docker:setup",
@@ -64,7 +64,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.3.8",
-    "mocha": "^8.2.1",
+    "mocha": "^9.2.0",
     "pixelmatch": "^5.2.1",
     "prettier": "1.19.0",
     "webdriverio": "^7.16.7"
