--- a/packages/screenshoter/package.json
+++ b/packages/screenshoter/package.json
@@ -34,10 +34,11 @@
     "lint": "eslint . --ext .js",
     "test": "yarn test:it && yarn test:e2e",
     "test:it": "mocha ./test/it/*.spec.js --no-timeouts",
-    "test:e2e": "mocha ./test/e2e/**/*.spec.js --no-timeouts --parallel --jobs 4",
+    "test:e2e": "mocha ./test/e2e/**/*.spec.js --no-timeouts --parallel --jobs 1",
+    "setup": "yarn docker:setup && appium:setup",
+    "appium:setup": "yarn global add appium && appium --address 127.0.0.1 --port 4723 --base-path /wd/hub &",
     "docker:setup": "node ../scripts/scripts/generate-docker-compose-config.js && docker-compose up -d",
     "docker:teardown": "docker-compose down",
-    "setup": "yarn docker:setup",
     "deps": "bongo deps",
     "preversion": "bongo preversion",
     "version": "bongo version",
