[screenshoter] fix stup command

--- a/packages/screenshoter/package.json
+++ b/packages/screenshoter/package.json
@@ -35,8 +35,8 @@
     "test": "yarn test:it && yarn test:e2e",
     "test:it": "mocha ./test/it/*.spec.js --no-timeouts",
     "test:e2e": "mocha ./test/e2e/**/*.spec.js --no-timeouts --parallel --jobs 1",
-    "setup": "yarn docker:setup && appium:setup",
-    "appium:setup": "yarn global add appium && appium --address 127.0.0.1 --port 4723 --base-path /wd/hub &",
+    "setup": "yarn docker:setup && yarn appium:setup",
+    "appium:setup": "appium --address 127.0.0.1 --port 4723 --base-path /wd/hub &",
     "docker:setup": "node ../scripts/scripts/generate-docker-compose-config.js && docker-compose up -d",
     "docker:teardown": "docker-compose down",
     "deps": "bongo deps",
@@ -59,6 +59,7 @@
     "@applitools/sdk-release-kit": "0.13.4",
     "@applitools/spec-driver-webdriverio": "1.2.5",
     "@applitools/test-utils": "1.0.10",
+    "appium": "^1.22.2",
     "chromedriver": "^95.0.0",
     "eslint": "^7.9.0",
     "eslint-plugin-mocha-no-only": "^1.1.1",
