--- a/packages/screenshoter/package.json
+++ b/packages/screenshoter/package.json
@@ -36,7 +36,7 @@
     "test:it": "mocha ./test/it/*.spec.js --no-timeouts",
     "test:e2e": "mocha ./test/e2e/**/*.spec.js --no-timeouts --parallel --jobs 1",
     "setup": "yarn android:setup && yarn appium:setup",
-    "android:setup": " $ANDROID_HOME/tools/bin/avdmanager create avd --name Pixel_3a_XL --force --device 'pixel_3a_xl' --package 'system-images;android-29;google_apis;x86'",
+    "android:setup": " $ANDROID_HOME/tools/bin/avdmanager create avd --name Pixel_3a_XL --force --device pixel_3a_xl --package system-images;android-30;google_apis;x86",
     "appium:setup": "appium --address 127.0.0.1 --port 4723 --base-path /wd/hub > /dev/null &",
     "docker:setup": "node ../scripts/scripts/generate-docker-compose-config.js && docker-compose up -d",
     "docker:teardown": "docker-compose down",
