[screenshoter, gh, driver] create new gh action for screenshoter
@applitools/screenshoter@3.3.5
[auto commit] @applitools/screenshoter: upgrade deps
@applitools/driver@1.4.12
@applitools/driver@1.4.11
[driver] fix wdio bug with class name selector

--- a/packages/screenshoter/package.json
+++ b/packages/screenshoter/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@applitools/screenshoter",
-  "version": "3.3.4",
+  "version": "3.3.5",
   "description": "Applitools universal screenshoter for web and native applications",
   "keywords": [
     "applitools",
@@ -34,13 +34,21 @@
     "lint": "eslint . --ext .js",
     "test": "yarn test:it && yarn test:e2e",
     "test:it": "mocha ./test/it/*.spec.js --no-timeouts",
-    "test:e2e": "mocha ./test/e2e/**/*.spec.js --no-timeouts --parallel --jobs 1",
-    "setup": "yarn android:setup && yarn appium:setup",
-    "android:setup": "$ANDROID_HOME/tools/bin/avdmanager --list && $ANDROID_HOME/tools/bin/avdmanager --install 'system-images;android-32;google_apis;x86_64' && $ANDROID_HOME/tools/bin/avdmanager create avd --name Pixel_3a_XL --force --device pixel_3a_xl --package 'system-images;android-32;google_apis;x86_64'",
-    "appium:setup": "appium --address 127.0.0.1 --port 4723 --base-path /wd/hub > /dev/null &",
+    "test:e2e": "mocha ./test/e2e/**/*.spec.js --no-timeouts --parallel --jobs ${MOCHA_JOBS:-1}",
+    "test:e2e:web": "mocha ./test/e2e/web/*.spec.js --no-timeouts --parallel --jobs ${MOCHA_JOBS:-1}",
+    "test:e2e:android": "mocha ./test/e2e/android*/*.spec.js --no-timeouts --parallel --jobs ${MOCHA_JOBS:-1}",
+    "test:e2e:ios": "mocha ./test/e2e/ios*/*.spec.js --no-timeouts --parallel --jobs ${MOCHA_JOBS:-1}",
+    "setup": "yarn docker:setup && yarn android:setup && yarn ios:setup && yarn appium:setup",
+    "setup:web": "yarn docker:setup",
+    "setup:android": "yarn android:setup && yarn appium:setup",
+    "setup:io": "yarn ios:setup && yarn appium:setup",
+    "android:setup": "node ./scripts/android-emulator.js",
     "docker:setup": "node ../scripts/scripts/generate-docker-compose-config.js && docker-compose up -d",
     "docker:teardown": "docker-compose down",
+    "ios:setup": "node ./scripts/ios-simulator.js",
+    "appium:setup": "mkdir -p ./logs && appium --address 127.0.0.1 --port 4723 --base-path /wd/hub --log-level error:info --log ./logs/appium.log &",
     "deps": "bongo deps",
+    "gh:publish": "gh workflow run publish-screenshoter.yml --ref $(git rev-parse --abbrev-ref HEAD)",
     "preversion": "bongo preversion",
     "version": "bongo version",
     "postversion": "bongo postversion --skip-release-notification"
@@ -52,14 +60,14 @@
   },
   "dependencies": {
     "@applitools/snippets": "2.1.12",
-    "@applitools/utils": "1.2.5",
+    "@applitools/utils": "1.2.11",
     "png-async": "0.9.4"
   },
   "devDependencies": {
-    "@applitools/driver": "1.4.7",
-    "@applitools/sdk-release-kit": "0.13.4",
-    "@applitools/spec-driver-webdriverio": "1.2.5",
-    "@applitools/test-utils": "1.0.10",
+    "@applitools/driver": "1.4.11",
+    "@applitools/sdk-release-kit": "0.13.11",
+    "@applitools/spec-driver-webdriverio": "1.2.6",
+    "@applitools/test-utils": "1.0.11",
     "appium": "^1.22.2",
     "chromedriver": "^95.0.0",
     "eslint": "^7.9.0",
