--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -178,15 +178,39 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: lts/*
+      - name: Add cli tools to PATH
+        run: echo "$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/tools/bin:$ANDROID_HOME/emulator" >> "${GITHUB_PATH}"
+      - name: Cache Android dependencies
+        uses: actions/cache@v2
+        with:
+          path: ~/.android/avd
+          key: android-api-29-dependencies
+      - name: Cache IOS dependencies
+        uses: actions/cache@v2
+        with:
+          path: ~/Library/Developer/Xcode/DerivedData/Appium-*
+          key: xcode-12.5.1-dependencies
+      # - name: Сopy Cache
+      #   run: |
+      #     cp -R ~/Library/Developer/Xcode/DerivedData/Appium-0 ~/Library/Developer/Xcode/DerivedData/Appium-1
+      #     cp -R ~/Library/Developer/Xcode/DerivedData/Appium-0 ~/Library/Developer/Xcode/DerivedData/Appium-2
       - name: Run tests
         uses: ./.github/actions/tests
         with:
           package: ${{fromJSON(needs.setup.outputs.packages).screenshoter.dirname}}
-      - name: Publish to NPM
-        uses: ./.github/actions/publish
+          jobs: 1
+      - name: Upload debug artifacts
+        if: always()
+        uses: actions/upload-artifact@v2
         with:
-          package: ${{fromJSON(needs.setup.outputs.packages).screenshoter.dirname}}
-          version: ${{fromJSON(needs.setup.outputs.packages).screenshoter.releaseVersion}}
+          name: screenshoter-logs
+          retention-days: 2
+          path: packages/${{fromJSON(needs.setup.outputs.packages).screenshoter.dirname}}/logs
+      # - name: Publish to NPM
+      #   uses: ./.github/actions/publish
+      #   with:
+      #     package: ${{fromJSON(needs.setup.outputs.packages).screenshoter.dirname}}
+      #     version: ${{fromJSON(needs.setup.outputs.packages).screenshoter.releaseVersion}}
   driver:
     needs: [setup, types, utils, snippets]
     if: ${{fromJSON(needs.setup.outputs.packages).driver && !failure() && !cancelled()}}
