--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -35,7 +35,7 @@
     "types"
   ],
   "scripts": {
-    "lint": "eslint '**/*.ts'",
+    "lint": "eslint \"**/*.ts\"",
     "build": "tsc",
     "deps": "bongo deps",
     "preversion": "bongo preversion && yarn build",
