--- a/packages/screenshoter/package.json
+++ b/packages/screenshoter/package.json
@@ -33,12 +33,13 @@
   "scripts": {
     "lint": "eslint . --ext .js",
     "test": "yarn test:it && yarn test:e2e",
+    "test:unit": "mocha ./test/unit/*.spec.js --no-timeouts",
     "test:it": "mocha ./test/it/*.spec.js --no-timeouts",
     "test:e2e": "mocha ./test/e2e/**/*.spec.js --no-timeouts --parallel --jobs ${MOCHA_JOBS:-1}",
     "test:e2e:web": "mocha ./test/e2e/web/*.spec.js --no-timeouts -r @applitools/test-utils/mocha-hooks/docker --parallel --jobs ${MOCHA_JOBS:-15}",
-    "test:e2e:android": "mocha ./test/e2e/android*/*.spec.js --no-timeouts --parallel --jobs ${MOCHA_JOBS:-1}",
-    "test:e2e:ios": "mocha ./test/e2e/ios*/*.spec.js --no-timeouts --parallel --jobs ${MOCHA_JOBS:-1}",
-    "setup": "yarn docker:setup && yarn android:setup && yarn ios:setup && yarn appium:setup",
+    "test:e2e:android": "APPLITOOLS_TEST_REMOTE=sauce mocha ./test/e2e/android*/*.spec.js --no-timeouts --parallel --jobs ${MOCHA_JOBS:-2}",
+    "test:e2e:ios": "APPLITOOLS_TEST_REMOTE=sauce mocha ./test/e2e/ios*/*.spec.js --no-timeouts --parallel --jobs ${MOCHA_JOBS:-2}",
+    "setup": "yarn docker:setup",
     "setup:web": "yarn docker:setup",
     "setup:android": "yarn android:setup && yarn appium:setup",
     "setup:ios": "yarn ios:setup && yarn appium:setup",
@@ -60,15 +61,16 @@
     }
   },
   "dependencies": {
-    "@applitools/snippets": "2.1.15",
+    "@applitools/snippets": "2.2.0",
     "@applitools/utils": "1.2.13",
     "png-async": "0.9.4"
   },
   "devDependencies": {
-    "@applitools/driver": "1.4.16",
+    "@applitools/driver": "1.5.2",
+    "@applitools/scripts": "1.1.0",
     "@applitools/sdk-release-kit": "0.13.11",
     "@applitools/spec-driver-webdriverio": "1.2.7",
-    "@applitools/test-utils": "1.0.12",
+    "@applitools/test-utils": "1.1.1",
     "appium": "^1.22.2",
     "chromedriver": "^95.0.0",
     "eslint": "^7.9.0",
